syntax = "proto3";

import "google/protobuf/timestamp.proto";


message Empty {}

enum ItemCategory {

    TECNOLOGIA = 0;

    LIBROS = 1;

    VESTIMENTA = 2;

    VEHICULOS = 3;

    DEPORTES = 4;

    HOGAR = 5;

}

message Item{
    int32 item_id = 1;
    string nombre = 2;
    string descripcion = 3;
    double precio = 4;
    int cantidad = 5;
    google.protobuf.Timestamp fecha_fabricacion = 6;
    ItemCategory category = 7;
}

message ItemSale{
    int32 seller_id = 1;
    Item item = 2;
}

message ItemId{
    int32 item_id = 1;
    int32 user_id = 2;

}

message Items{
    repeated ItemSale items = 1;
}

message getItemsRequest{
    int32 user_id = 1;
}

message getItemsFiltered{
    int32 user_id = 1;
    ItemCategory category = 2;
    string nombre = 3;
    double preciomin = 4;
    double preciomax = 5;
    google.protobuf.Timestamp fecha_desde = 6;
    google.protobuf.Timestamp fecha_hasta = 7;
}

message buyItemRequest{
    int32 user_id = 1;
    int32 item_id = 2;
}

message ItemsCompraVenta{
    int32 user_id = 1;
}

message ItemsCompraVentaResponse{
    repeated ItemSale items= 1;
}


service Item{
    rpc NuevoItem(ItemSale) returns(ItemId);
    rpc EditarItem(ItemSale) returns(ItemId);
    rpc GetItem(ItemId) returns(ItemSale);
    rpc GetItems(getItemsRequest) return(Items);
    rpc GetItemsFiltered(getItemsFiltered) returns(Items);
    rpc ComprarItem(buyItemRequest) returns (Empty);
    rpc ItemsComprados(ItemsCompraVenta) returns (ItemsCompraVentaResponse);
    rpc ItemsEnVenta(ItemsCompraVenta) returns (ItemsCompraVentaResponse);
}





